<resources>
    <string name="app_name">High5</string>
    <string name="signup_txt_big">Enter your personal details and\nwe\'ll send a verification link to your mobile phone.</string>
    <string name="signup_txt_small">Let\'s get you set up</string>
    <string name="signup_txt_terms_of_use">I agree to <b><u>Terms of Use</u></b></string>
    <string name="signup_txt_privacy_policy">I agree to <b><u>Privacy Policy</u></b></string>
    <!-- <string name="signup_txt_terms">I agree to join in the following collectives</string>-->
    <string name="signup_disclaimer">Disclaimer: The app depicts sale of Medical Marijuana only</string>

    <string name="hint_username"><font size="14">Email id</font></string>
    <string name="hint_name"><font size="14">Name</font></string>
    <string name="hint_email_address"><font size="14">Email address</font></string>
    <string name="hint_zip"><font size="14">Zip code</font></string>
    <string name="hint_mobilenumber"><font size="14">Mobile number</font></string>
    <string name="hint_password"><font size="14">Password</font></string>
    <string name="verification_txt_big">Please check your email account\nto get verification code</string>
    <string name="verification_txt_small">Enter your verification code</string>
    <string name="verification_txt_edittext"><font size="14">Verification code</font></string>

    <string name="internet_error">No internet connection.</string>
    <string name="name_error">Enter name</string>
    <string name="email_or_mobile_error">Enter email or mobile</string>
    <string name="password_error">Enter password</string>
    <string name="zipcode_error">Enter zipcode</string>
    <string name="password_length_error">Password must be between 7 to 20 character</string>
    <string name="email_valid_error">Please enter valid email address</string>
    <string name="email_error">Please enter email address</string>
    <string name="phone_error">Please enter mobile number</string>
    <string name="zipcode_valid_error">Please enter valid Zip code</string>
    <string name="mobile_valid_error">Please enter valid mobile number</string>
    <string name="term_condition_error">Please select terms &amp; condition.</string>
    <string name="privacy_policy_error">Please select privacy &amp; policy.</string>

    <!--IDENTIFICATION SCREEN TEXT-->
    <string name="identification_provide">PROVIDE IDENTIFICATION</string>
    <string name="identification_great">Great! next we need to\nsee some ID.</string>
    <string name="identification_add">ADD IDENTIFICATION</string>
    <string name="identification_txt1">We need to verify your identity. Please snap a photo of your\nstate-issued ID with birthdate.</string>
    <string name="identification_txt2">Valid IDs include: Drivers License, US Passport,\nOr a state-issued Photo ID with birthdate.</string>
    <string name="identification_medicalcard">PROVIDE MEDICAL CARD</string>
    <string name="identification_marijuana">Do you have a medical\nmarijuana card?</string>
    <string name="identification_upload">UPLOAD RECOMMENDATION</string>
    <string name="identification_txt3">To Comply with state law, please provide a valid medical\nmarijuana recommendation letter or ID card.</string>

    <string name="product_details">These Tangrine Gummies are seriously delicious. One\nbox contains six 10mg doses in Sativa. Valhalla gum-\nmies are strain specific (stamped right on the back of\nthe box because we know you want to know.) These\nhandcrafted gummies are gluten-free.</string>

    <!-- Add other Address-->
    <string name="hint_Phone_number"><font size="14">Phone number</font></string>
    <string name="hint_state"><font size="14">State</font></string>
    <string name="hint_country"><font size="14">Country</font></string>
    <string name="hint_city"><font size="14">City</font></string>
    <string name="hint_zipcode"><font size="14">Zipcode</font></string>
    <string name="hint_address"><font size="14">Address</font></string>
    <string name="hint_home_add"><font size="14">Home address</font></string>
    <string name="hint_fname"><font size="14">First name</font></string>
    <string name="hint_lname"><font size="14">Last name</font></string>
    <string name="location_correct">This location is correct.</string>
    <string name="title_shops">Shops</string>
    <string name="profile">Profile</string>


    <string name="car_details_provider">PROVIDE YOUR CAR DETAILS</string>
    <string name="verify_process_details">We need to verify your personal details and documents\n once completed that process then you can access this application.</string>

    <string name="add_verification">ADD VERIFICATION</string>

    <string name="title_current_order_status">Current order status</string>

    <string name="gps_not_enabled">GPS is not enabled. Do you want to go to settings menu?</string>
    <string name="settings">Settings</string>
    <string name="cancel">Cancel</string>

    <!--Map API Key-->
    <string name="map_key_live">AIzaSyDs4tK-U2XyxHrLraOQiDzWH3ldqF4QeWw</string>
<!--    <string name="api_map_key">AIzaSyBXpMc7Nu0JSX8AZytQtmSk-FyV9Fn6X_M</string>-->
    <string name="api_map_key">AIzaSyBvl4elBPmiituLwlxnvymsMLwNoECeHAs</string>
    <string name="map_key_debug">AIzaSyDm_jLOYOCFu58BpSWsHjYTgHqmUcs6G3Q</string>


    <!--home page -->
    <string name="shops">Shops</string>
    <string name="market_place">Marketplace</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="reorder">REORDER</string>
    <string name="order">Order</string>

    <string name="cart_error">Your cart is not empty.</string>
    <string name="go_to_cart">Go to cart</string>
    <string name="str_login_required">Please login to proceed further</string>
    <string name="rideshare">Rideshare</string>
    <string name="vendor">Vendor</string>
    <string name="str_vendor">Become a Vendor</string>
    <string name="become_a_driver">Become a Driver</string>
    <string name="key_secret_stripe">Bearer sk_test_KDesCgkR1uJySRkM4rf35Jj4</string>

</resources>
