<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background1"
    android:orientation="vertical">

    <com.weedshop.SegmentedProgressBar
        android:id="@+id/segmented_progressbar"
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:background="@android:color/transparent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imgLogout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="15dp"
            android:src="@drawable/logout" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:gravity="center"
            android:text="@string/identification_provide"
            android:textColor="@android:color/white"
            android:textSize="13sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:text="@string/identification_great"
            android:textColor="#2DCE9C"
            android:textSize="18sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:src="@drawable/proofid" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:text="@string/identification_txt1"
            android:textColor="@android:color/white"
            android:textSize="10sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:gravity="center"
            android:text="@string/identification_txt2"
            android:textColor="@android:color/white"
            android:textSize="10sp" />

        <Button
            android:id="@+id/btn_add_id"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/signin_edittext_height"
            android:layout_marginTop="35dp"
            android:background="@drawable/round_corner_gradient"
            android:paddingLeft="55dp"
            android:paddingRight="55dp"
            android:text="@string/identification_add"
            android:textColor="@android:color/white"
            android:textSize="12sp" />
    </LinearLayout>

</LinearLayout>
