<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background1"
    android:orientation="vertical">

    <com.weedshop.SegmentedProgressBar
        android:id="@+id/segmented_progressbar"
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:background="@android:color/transparent" />


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingLeft="15dp"
            android:paddingRight="15dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_signin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="Sign in"
                    android:textColor="@android:color/white"
                    android:textSize="16sp" />

                <Space
                    android:layout_width="25dp"
                    android:layout_height="1dp" />

                <TextView
                    android:id="@+id/tv_signup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="Sign up"
                    android:textColor="#2DCE9C"
                    android:textSize="16sp" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/signup_txt_big"
                android:textColor="@android:color/white"
                android:textSize="12sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:text="@string/signup_txt_small"
                android:textColor="#2DCE9C"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/et_name"
                android:layout_width="match_parent"
                android:layout_height="@dimen/signin_edittext_height"
                android:layout_marginLeft="@dimen/edittext_padding_left"
                android:layout_marginRight="@dimen/edittext_padding_left"
                android:layout_marginTop="35dp"
                android:background="@drawable/round_corner"
                android:drawableLeft="@drawable/name"
                android:drawablePadding="10dp"
                android:hint="@string/hint_name"
                android:imeOptions="actionNext"
                android:inputType="textCapWords"
                android:maxLength="50"
                android:maxLines="1"
                android:paddingLeft="20dp"
                android:textColorHint="@color/hint_color" />

            <EditText
                android:id="@+id/et_emailaddress"
                android:layout_width="match_parent"
                android:layout_height="@dimen/signin_edittext_height"
                android:layout_marginLeft="@dimen/edittext_padding_left"
                android:layout_marginRight="@dimen/edittext_padding_left"
                android:layout_marginTop="@dimen/edittext_padding_between_signup"
                android:background="@drawable/round_corner"
                android:drawableLeft="@drawable/email"
                android:drawablePadding="10dp"
                android:hint="@string/hint_email_address"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:paddingLeft="20dp"
                android:textColorHint="@color/hint_color" />

            <EditText
                android:id="@+id/et_zipcode"
                android:layout_width="match_parent"
                android:layout_height="@dimen/signin_edittext_height"
                android:layout_marginLeft="@dimen/edittext_padding_left"
                android:layout_marginRight="@dimen/edittext_padding_left"
                android:layout_marginTop="@dimen/edittext_padding_between_signup"
                android:background="@drawable/round_corner"
                android:drawableLeft="@drawable/zipcode"
                android:drawablePadding="10dp"
                android:hint="@string/hint_zip"
                android:imeOptions="actionNext"
                android:inputType="number"
                android:maxLength="6"
                android:maxLines="1"
                android:paddingLeft="20dp"
                android:textColorHint="@color/hint_color" />

            <EditText
                android:id="@+id/et_mobile"
                android:layout_width="match_parent"
                android:layout_height="@dimen/signin_edittext_height"
                android:layout_marginLeft="@dimen/edittext_padding_left"
                android:layout_marginRight="@dimen/edittext_padding_left"
                android:layout_marginTop="@dimen/edittext_padding_between_signup"
                android:background="@drawable/round_corner"
                android:drawableLeft="@drawable/mobilenumber"
                android:drawablePadding="10dp"
                android:hint="@string/hint_mobilenumber"
                android:imeOptions="actionNext"
                android:inputType="phone"
                android:maxLines="1"
                android:paddingLeft="20dp"
                android:textColorHint="@color/hint_color" />

            <EditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="@dimen/signin_edittext_height"
                android:layout_marginLeft="@dimen/edittext_padding_left"
                android:layout_marginRight="@dimen/edittext_padding_left"
                android:layout_marginTop="@dimen/edittext_padding_between_signup"
                android:background="@drawable/round_corner"
                android:drawableLeft="@drawable/password"
                android:drawablePadding="10dp"
                android:drawableRight="@drawable/eye"
                android:hint="@string/hint_password"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:maxLength="50"
                android:maxLines="1"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:textColorHint="@color/hint_color" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/iv_terms"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginRight="15dp"
                    android:background="@drawable/round_corner_terms" />

                <TextView
                    android:id="@+id/txtTermsOfUse"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/signup_txt_terms_of_use"
                    android:textColor="@android:color/white"
                    android:textSize="12sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/iv_privacy"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginRight="15dp"
                    android:background="@drawable/round_corner_terms" />

                <TextView
                    android:id="@+id/txtPrivacyPolicy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/signup_txt_privacy_policy"
                    android:textColor="@android:color/white"
                    android:textSize="12sp" />
            </LinearLayout>

            <!--<com.dd.CircularProgressButton
                android:id="@+id/btn_signup"
                android:layout_width="match_parent"
                android:layout_height="@dimen/signin_edittext_height"
                android:layout_marginLeft="@dimen/button_margin"
                android:layout_marginRight="@dimen/button_margin"
                android:layout_marginTop="24dp"
                android:background="@drawable/btn_bg"
                android:text="SIGN UP"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                app:cpb_cornerRadius="50dp" />-->

            <Button
                android:id="@+id/btn_signup"
                android:layout_width="match_parent"
                android:layout_height="@dimen/signin_edittext_height"
                android:layout_marginLeft="@dimen/button_margin"
                android:layout_marginRight="@dimen/button_margin"
                android:layout_marginTop="24dp"
                android:background="@drawable/round_corner_gradient"
                android:text="SIGN UP"
                android:textColor="@android:color/white" />

            <TextView
                android:id="@+id/txtDisclaimer"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:gravity="bottom|center"
                android:text="@string/signup_disclaimer"
                android:textColor="@android:color/white"
                android:textSize="12sp"
                android:textStyle="bold" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>
