<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fnBtn="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background1"
    android:orientation="vertical">

    <com.weedshop.SegmentedProgressBar
        android:id="@+id/segmented_progressbar"
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:background="@android:color/transparent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingLeft="15dp"
        android:paddingRight="15dp">


        <ImageView
            android:id="@+id/imgLogout"
            android:layout_width="wrap_content"
            android:layout_gravity="left"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:src="@drawable/logout" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:text="@string/verification_txt_big"
            android:textColor="@android:color/white"
            android:textSize="14sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:src="@drawable/verfication" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:text="@string/verification_txt_small"
            android:textColor="#2DCE9C"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/et_name"
            android:layout_width="match_parent"
            android:layout_height="@dimen/signin_edittext_height"
            android:layout_marginLeft="@dimen/edittext_padding_left"
            android:layout_marginRight="@dimen/edittext_padding_left"
            android:layout_marginTop="15dp"
            android:background="@drawable/round_corner"
            android:drawableLeft="@drawable/ic_hash"
            android:hint="@string/verification_txt_edittext"
            android:paddingLeft="20dp"
            android:singleLine="true"
            android:textColorHint="@color/hint_color" />

        <Button
            android:id="@+id/btn_submit"
            android:layout_width="match_parent"
            android:layout_height="@dimen/signin_edittext_height"
            android:layout_marginLeft="@dimen/button_margin"
            android:layout_marginRight="@dimen/button_margin"
            android:layout_marginTop="30dp"
            android:background="@drawable/round_corner_gradient"
            android:text="submit"
            android:textAllCaps="true"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/txtResend"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/edittext_padding_left"
            android:layout_marginRight="@dimen/edittext_padding_left"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:text="Resend Verification Code."
            android:textColor="@android:color/white"
            android:textSize="12sp" />
    </LinearLayout>
</LinearLayout>
